--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.2",
-    "next": "15.1.6",
+    "next": "^15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
